# lleidadevelopers-meetups

./: .gitignore
funprog/: README.md  index.html
funprog/plugin/highlight/: highlight.js
introlenses/: Makefile  introlenses.html  introlenses.lhs
java8/: Introduction to Java8.pptx
rankntypes/: Makefile  rankntypes.html  rankntypes.lhs
typeclasses/: Makefile  typeclasses-nonet.html  typeclasses.html  typeclasses.lhs
zippers/: README.md  lyah-zippers.cabal  stack.yaml
zippers/src/: ZipTree.hs  Zippers.hs
