name:                lyah-zippers
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jmgimeno/lyah-zippers#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Zippers,
                       ZipTree
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       pretty-tree
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jmgimeno/lyah-zippers
